# receipt_processor_service

./: Dockerfile.test  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
receipt_processor_service/: main.py  server.py
receipt_processor_service/controllers/: receipts.py
receipt_processor_service/receipt_processor/: receipt_model.py
receipt_processor_service/routes/: init_routes.py  receipts.py
tests/: test_rules.py
